[package]
name = "wormhole"
version = "0.1.0"
authors = ["Nathan Fuchs <fuchsnj@gmail.com>"]

[dependencies]
hyper = "0.9.10"
url = "1.2.0"
unicase = "1.4.0"
cookie = "0.2.5"
openssl = "0.7"
serde_json = "0.8.1"
serde = "0.8.3"
serde_macros = "0.8.3"

[dependencies.json_macros]
version = "^0.3"
default-features = false
features = ["with-serde"]